<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_ServiceTransfer_DeleteFile" Id="{973f5d33-f8d7-4588-9411-ea2bcbdc664e}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_ServiceTransfer_DeleteFile :
STRUCT
	cbFileName : DWORD;
	bRecursive : DWORD; // Error in documentation
	s_filename : STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>